--- a/details/ANDON.html
+++ b/details/ANDON.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- SEO Meta Tags -->
-		<meta name="description" content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
+		<meta name="description"
+			content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
 		<meta name="author" content="Inovatik">
 
 		<!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -28,8 +29,10 @@
 		<title>上海灵娃智能科技有限公司</title>
 
 		<!-- Styles -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+			rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
+			rel="stylesheet">
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -58,12 +61,12 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 300px;" src="../images/logo.jpg"
-				 alt="alternative"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 300px;"
+					src="../images/logo.jpg" alt="alternative"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-			 aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+				aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-awesome fas fa-bars"></span>
 				<span class="navbar-toggler-awesome fas fa-times"></span>
 			</button>
@@ -91,157 +94,137 @@
 		<!-- end of navbar -->
 
 
-    <!-- Header -->
-    <header id="header" class="ex-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1> ANDON & 暗灯-现场快反系统</h1>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </header> <!-- end of ex-header -->
-    <!-- end of header -->
+		<!-- Header -->
+		<header id="header" class="ex-header">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<h1> ANDON & 暗灯-现场快反系统</h1>
+					</div> <!-- end of col -->
+				</div> <!-- end of row -->
+			</div> <!-- end of container -->
+		</header> <!-- end of ex-header -->
+		<!-- end of header -->
 
 
-    <!-- Breadcrumbs -->
-    <div class="ex-basic-1">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumbs">
-                        <a href="index.html">首页</a><i class="fa fa-angle-double-right"></i><span>ANDON暗灯-现场快反系统</span>
-                    </div> <!-- end of breadcrumbs -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of ex-basic-1 -->
-    <!-- end of breadcrumbs -->
+		<!-- Breadcrumbs -->
+		<div class="ex-basic-1">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="breadcrumbs">
+							<a href="index.html">首页</a><i
+								class="fa fa-angle-double-right"></i><span>ANDON暗灯-现场快反系统</span>
+						</div> <!-- end of breadcrumbs -->
+					</div> <!-- end of col -->
+				</div> <!-- end of row -->
+			</div> <!-- end of container -->
+		</div> <!-- end of ex-basic-1 -->
+		<!-- end of breadcrumbs -->
 
 
-    <!-- Terms Content -->
-    <div class="ex-basic-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="text-container last">
-                        <h3>ANDON暗灯-现场快反系统</h3>
-						<div style="width: 45%;float: left;">
-					   <p>
-					   Andon系统，作为自主研发的现场快反系统模块，是精益生产制造管理的一个核心工具。在制造过程中能够发现各种生产、
-					   质量、物料、人员等异常，及时报送反馈，并流程监控，确保能够在最短的时间里解决问题，使生产能够平稳进行，提高效率。
-					   同时，可以产生专家资料库，有助于现场管理的改善与提升。
-					   </p>
-					   <p>
-					    通过设备联网等方式，实现设备状态的实时集中监控、实时报警、及时处理，提升正确性及及时性。
-					   </p>
-					   <p>
-					    通过与TPM系统的集成，实现现场生产、设备状态的全可视化，提供实时数据信息，有助于提升现场管理水平。
-					   </p>
-						  <a class="btn-outline-reg" href="../index.html">返回首页</a>
-						</div>
-						<div style="width: 45%;float: right;">
-							<img src="../images/ANDON.png" style="width: 100%;">
-						</div>
-                  
-                    </div> <!-- end of text-container -->
-                </div>
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of ex-basic -->
-    <!-- end of terms content -->
+		<!-- Terms Content -->
+		<div class="ex-basic-2">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="text-container last">
+							<h3>ANDON暗灯-现场快反系统</h3>
+							<div style="width: 45%;float: left;">
+								<p>
+									Andon系统，作为自主研发的现场快反系统模块，是精益生产制造管理的一个核心工具。在制造过程中能够发现各种生产、
+									质量、物料、人员等异常，及时报送反馈，并流程监控，确保能够在最短的时间里解决问题，使生产能够平稳进行，提高效率。
+									同时，可以产生专家资料库，有助于现场管理的改善与提升。
+								</p>
+								<p>
+									通过设备联网等方式，实现设备状态的实时集中监控、实时报警、及时处理，提升正确性及及时性。
+								</p>
+								<p>
+									通过与TPM系统的集成，实现现场生产、设备状态的全可视化，提供实时数据信息，有助于提升现场管理水平。
+								</p>
+								<a class="btn-outline-reg" href="../index.html">返回首页</a>
+							</div>
+							<div style="width: 45%;float: right;">
+								<img src="../images/ANDON.png" style="width: 100%;">
+							</div>
+
+						</div> <!-- end of text-container -->
+					</div>
+				</div> <!-- end of row -->
+			</div> <!-- end of container -->
+		</div> <!-- end of ex-basic -->
+		<!-- end of terms content -->
 
 
- 
 
 
-    <!-- Footer -->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="text-container about">
-                        <h4>Few Words About Aria</h4>
-                        <p class="white">We're passionate about creating the best mobile apps for personal develop passionate about creating the best mobile apps for. Personal develop passionate about creating the best mobile apps.</p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Links</h4>
-                        <ul class="list-unstyled li-space-lg white">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li>
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Tools</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li class="media">
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Partners</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li>
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of footer -->  
-    <!-- end of footer -->
+
+		<!-- Footer -->
+		<div class='footer' style='overflow-x: hidden'>
+			<div class='row' style='display: flex; justify-content: center'>
+				<div class='col-md-3'>
+					<div class='text-container about'>
+						<h4>联系我们</h4>
+						<p class='white'><img src='../images/icon/phone.png'> : 021-58055790</p>
+						<p class='white'><img src='../images/icon/iphone.png' class='small'> : +86-18721633726
+							+86-18017032987</p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> :
+							yanqian_liao@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区新区秀浦路3500号B幢</p>
+					</div>
+
+				</div>
+
+				<div class='col-md-3'>
+					<div class='text-container'>
+						<h4>我们的使命</h4>
+						<p class='white'>持续研发最落地的制造管理信息系统</p>
+						<p class='white'>通过数字化服务提升制造企业效率</p>
+						<p class='white'>提升质量水平，降低浪费和库存</p>
+						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
+						<p class='white'>凝聚我们的力量，收获明日的辉煌</p>
+					</div>
+				</div>
+				<div class='col-md-2'>
+					<div class='text-container' style='text-align: center;margin: 0 auto'>
+						<h6 style='color: #FFFFFF'>社会荣誉</h6>
+						<img src='../images/rongyu1.png' alt='' style='width: 100%'>
+					</div>
+				</div>
+
+				<div class='col-md-2'>
+					<div class='text-container' style='text-align: centermargin: 0 auto'>
+						<h6 style='color: #FFFFFF'>企业证书</h6>
+						<img src='../images/rongyu2.png' alt='' style='width: 100%'>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class='copyright'>
+			<div class='container'>
+				<div class='row'>
+					<div class='col-lg-12'>
+						<p class='p-small'>备案号：沪ICP备16031549号-1　 <a>沪公网安备 31010602003203号</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
-    <!-- Copyright -->
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Template by Inovatik</a></p>
-                </div> <!-- end of col -->
-            </div> <!-- enf of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of copyright --> 
-    <!-- end of copyright -->
-
- 
-   <!-- Scripts -->
-   <script src="../js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-   <script src="../js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
-   <script src="../js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-   <script src="../js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
-   <script src="../js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-   <script src="../js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-   <script src="../js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
-   <script src="../js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
-   <script src="../js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
-   <script src="../js/scripts.js"></script> <!-- Custom scripts -->
-</body>
+		<!-- Scripts -->
+		<script src="../js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+		<script src="../js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
+		<script src="../js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+		<script src="../js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+		<script src="../js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+		<script src="../js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+		<script src="../js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
+		<script src="../js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
+		<script src="../js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
+		<script src="../js/scripts.js"></script> <!-- Custom scripts -->
+	</body>
 </html>
