--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- SEO Meta Tags -->
-		<meta name="description" content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
+		<meta name="description"
+			content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
 		<meta name="author" content="Inovatik">
 
 		<!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -28,8 +29,10 @@
 		<title>上海灵娃智能科技有限公司</title>
 
 		<!-- Styles -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+			rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
+			rel="stylesheet">
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -58,12 +61,12 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px;background: #fff;border-radius: 50%;"
-				 src="../images/logo.jpg"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img
+					style="height: 60px;width: 60px;background: #fff;border-radius: 5%;" src="../images/logo.jpg"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-			 aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+				aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-awesome fas fa-bars"></span>
 				<span class="navbar-toggler-awesome fas fa-times"></span>
 			</button>
@@ -109,74 +112,74 @@
 
 
 
-        <div id="jianJie">
-        	<div style="width: 60%;margin: 0 auto;">
-        		<h2>灵娃简介</h2>
-        		<p>上海灵娃智能科技有限公司，自2002年开始为工业电气制造行业提供数字化工厂解决方案，先后为施耐德电气、大全电气、
-        		许继电气、德力西电气、上海电气、广电电气、伊顿电气、某军工电气等提供单个工厂至集团级别多工厂的数字化解决落地方案，
-        		专注在工业电气行业深度数字化技术咨询及落地服务，是国内最早开始交数字化解决方案开创者之一。</p>
-        		<p>公司为上海市高新技术企业，在数字化工厂领域，灵娃积累了超过百项软件著作权及软件产品。为客户提供整体数字化工厂解决方案。</p>
-        		<p>公司总部坐落在上海浦东新区，具备丰富实操运营经验，深厚专业知识背景，熟悉工厂现场业务流程、IT知识的产品团队，咨询团队，信息化业务和技术开发团队，
-        		实施和售后服务团队。</p>
-        	</div>
-        </div>
-		
-		
-		
+		<div id="jianJie">
+			<div style="width: 60%;margin: 0 auto;">
+				<h2>灵娃简介</h2>
+				<p>上海灵娃智能科技有限公司，自2002年开始为工业电气制造行业提供数字化工厂解决方案，先后为施耐德电气、大全电气、
+					许继电气、德力西电气、上海电气、广电电气、伊顿电气、某军工电气等提供单个工厂至集团级别多工厂的数字化解决落地方案，
+					专注在工业电气行业深度数字化技术咨询及落地服务，是国内最早开始交数字化解决方案开创者之一。</p>
+				<p>公司为上海市高新技术企业，在数字化工厂领域，灵娃积累了超过百项软件著作权及软件产品。为客户提供整体数字化工厂解决方案。</p>
+				<p>公司总部坐落在上海浦东新区，具备丰富实操运营经验，深厚专业知识背景，熟悉工厂现场业务流程、IT知识的产品团队，咨询团队，信息化业务和技术开发团队，
+					实施和售后服务团队。</p>
+			</div>
+		</div>
+
+
+
 		<!-- Description -->
 		<div class="cards-1" id="hexin">
 			<h2>核心竞争力</h2>
-		    <div class="container">
-		        <div class="row">
-		            <div class="col-lg-12">
-		                <!-- Card -->
-		                <div class="card">
-		                    <span class="fa-stack">
-		                        <span class="hexagon"></span>
-		                    <i class="fas fa-binoculars fa-stack-1x"></i>
-		                    </span>
-		                    <div class="card-body">
-		                        <h4 class="card-title">高度</h4>
-		                        <p>从大型制造业董事长、总经理及核心管理团队视角出发，注重系统整体系统化、精益化、可落地、可操作，集合规划、制造线体、软件系统一体化的立体解决方案</p>
-		                    </div>
-		                </div>
-		                <!-- end of card -->
-		
-		                <!-- Card -->
-		                <div class="card">
-		                    <span class="fa-stack">
-		                        <span class="hexagon"></span>
-		                    <i class="fas fa-list-alt fa-stack-1x"></i>
-		                    </span>
-		                    <div class="card-body">
-		                        <h4 class="card-title">深度</h4>
-		                        <p>深耕工业电气制造业超过二十年，深度理解工业电气行业过程与痛点， 集合精益制造思想、数据驱动精益及质量提升，为客户提供深度数字化解决方案。</p>
-		                    </div>
-		                </div>
-		                <!-- end of card -->
-		
-		                <!-- Card -->
-		                <div class="card">
-		                    <span class="fa-stack">
-		                        <span class="hexagon"></span>
-		                    <i class="fas fa-chart-pie fa-stack-1x"></i>
-		                    </span>
-		                    <div class="card-body">
-		                        <h4 class="card-title">广度</h4>
-		                        <p>深度实施低压、中压、高压等多种工业电气产品数字化工厂经验，集团化（超过20家工厂集团交付）、单厂、单车间工业电气交付案例。与各种加工设备。
-								立体库、AGV物流系统融合对接，各种ERP 、数据中台、SOA企业总线及相关系统深度对接融合案例。</p>
-		                    </div>
-		                </div>
-		                <!-- end of card -->
-		
-		            </div>
-		            <!-- end of col -->
-		        </div>
-		        <!-- end of row -->
-		    </div>
-		    <!-- end of container -->
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<!-- Card -->
+						<div class="card">
+							<span class="fa-stack">
+								<span class="hexagon"></span>
+								<i class="fas fa-binoculars fa-stack-1x"></i>
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">高度</h4>
+								<p>从大型制造业董事长、总经理及核心管理团队视角出发，注重系统整体系统化、精益化、可落地、可操作，集合规划、制造线体、软件系统一体化的立体解决方案</p>
+							</div>
+						</div>
+						<!-- end of card -->
+
+						<!-- Card -->
+						<div class="card">
+							<span class="fa-stack">
+								<span class="hexagon"></span>
+								<i class="fas fa-list-alt fa-stack-1x"></i>
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">深度</h4>
+								<p>深耕工业电气制造业超过二十年，深度理解工业电气行业过程与痛点， 集合精益制造思想、数据驱动精益及质量提升，为客户提供深度数字化解决方案。</p>
+							</div>
+						</div>
+						<!-- end of card -->
+
+						<!-- Card -->
+						<div class="card">
+							<span class="fa-stack">
+								<span class="hexagon"></span>
+								<i class="fas fa-chart-pie fa-stack-1x"></i>
+							</span>
+							<div class="card-body">
+								<h4 class="card-title">广度</h4>
+								<p>深度实施低压、中压、高压等多种工业电气产品数字化工厂经验，集团化（超过20家工厂集团交付）、单厂、单车间工业电气交付案例。与各种加工设备。
+									立体库、AGV物流系统融合对接，各种ERP 、数据中台、SOA企业总线及相关系统深度对接融合案例。</p>
+							</div>
+						</div>
+						<!-- end of card -->
+
+					</div>
+					<!-- end of col -->
+				</div>
+				<!-- end of row -->
+			</div>
+			<!-- end of container -->
 		</div>
- 
+
 
 
 		<div id="timeline" class="container">
@@ -358,82 +361,60 @@
 		</div>
 
 
+	
+
 		<!-- Footer -->
-		<div class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="text-container about">
-							<h4>Few Words About Aria</h4>
-							<p class="white">We're passionate about creating the best mobile apps for personal develop passionate about
-								creating the best mobile apps for. Personal develop passionate about creating the best mobile apps.</p>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Links</h4>
-							<ul class="list-unstyled li-space-lg white">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li>
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Tools</h4>
-							<ul class="list-unstyled li-space-lg">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li class="media">
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Partners</h4>
-							<ul class="list-unstyled li-space-lg">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li>
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-				</div> <!-- end of row -->
-			</div> <!-- end of container -->
-		</div> <!-- end of footer -->
-		<!-- end of footer -->
-
-
-		<!-- Copyright -->
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Template by Inovatik</a></p>
-					</div> <!-- end of col -->
-				</div> <!-- enf of row -->
-			</div> <!-- end of container -->
-		</div> <!-- end of copyright -->
-		<!-- end of copyright -->
+		<div class='footer' style='overflow-x: hidden'>
+			<div class='row' style='display: flex; justify-content: center'>
+				<div class='col-md-3'>
+					<div class='text-container about'>
+						<h4>联系我们</h4>
+						<p class='white'><img src='../images/icon/phone.png'> : 021-58055790</p>
+						<p class='white'><img src='../images/icon/iphone.png' class='small'> : +86-18721633726
+							+86-18017032987</p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> : yanqian_liao@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区新区秀浦路3500号B幢</p>
+					</div>
+		
+				</div>
+		
+				<div class='col-md-3'>
+					<div class='text-container'>
+						<h4>我们的使命</h4>
+						<p class='white'>持续研发最落地的制造管理信息系统</p>
+						<p class='white'>通过数字化服务提升制造企业效率</p>
+						<p class='white'>提升质量水平，降低浪费和库存</p>
+						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
+						<p class='white'>凝聚我们的力量，收获明日的辉煌</p>
+					</div>
+				</div>
+				<div class='col-md-2'>
+					<div class='text-container' style='text-align: center;margin: 0 auto'>
+						<h6 style='color: #FFFFFF'>社会荣誉</h6>
+						<img src='../images/rongyu1.png' alt='' style='width: 100%'>
+					</div>
+				</div>
+		
+				<div class='col-md-2'>
+					<div class='text-container' style='text-align: centermargin: 0 auto'>
+						<h6 style='color: #FFFFFF'>企业证书</h6>
+						<img src='../images/rongyu2.png' alt='' style='width: 100%'>
+					</div>
+				</div>
+		
+			</div>
+		</div>
+		<div class='copyright'>
+			<div class='container'>
+				<div class='row'>
+					<div class='col-lg-12'>
+						<p class='p-small'>备案号：沪ICP备16031549号-1　 <a>沪公网安备 31010602003203号</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 		<!-- Scripts -->
@@ -448,15 +429,17 @@
 		<script src="../js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
 		<script src="../js/scripts.js"></script> <!-- Custom scripts -->
 		<script src="../js/about.js" type="text/javascript" charset="utf-8"></script>
-		<script src="http://api.map.baidu.com/api?v=1.4&callback=map_init" type="text/javascript" charset="utf-8"></script>
-		<script src="http://api.map.baidu.com/getscript?v=1.4&ak=&services=&t=20210201021024" type="text/javascript" charset="utf-8"></script>
+		<script src="http://api.map.baidu.com/api?v=1.4&callback=map_init" type="text/javascript" charset="utf-8">
+		</script>
+		<script src="http://api.map.baidu.com/getscript?v=1.4&ak=&services=&t=20210201021024" type="text/javascript"
+			charset="utf-8"></script>
 	</body>
 </html>
 <script type="text/javascript">
 	var markerArr = [{
 		title: "上海灵娃智能科技有限公司",
-		point: "121.63593,31.136762", 
-		address: "上海市浦东新区秀浦路3500" 
+		point: "121.503318,31.162774",
+		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
 	}];
 
 	var map; //Map实例  
@@ -464,7 +447,7 @@
 		map = new BMap.Map("map");
 
 		//第1步：设置地图中心点，上海市  
-		var point = new BMap.Point(121.63593,31.136762);
+		var point = new BMap.Point(121.503318, 31.162774);
 		var circle = new BMap.Circle(point, 20, {
 			strokeColor: "blue",
 			strokeWeight: 2,
@@ -541,10 +524,12 @@
 		var title = '<div style="font-weight:bold;color:#CE5521;font-size:14px">' + poi.title + '</div>';
 		//pop弹窗信息  
 		var html = [];
-		html.push('<table cellspacing="0" style="table-layout:fixed;width:100%;font:12px arial,simsun,sans-serif"><tbody>');
+		html.push(
+		'<table cellspacing="0" style="table-layout:fixed;width:100%;font:12px arial,simsun,sans-serif"><tbody>');
 		html.push('<tr>');
 		html.push(
-			'<td style="vertical-align:top;line-height:16px;width:38px;white-space:nowrap;word-break:keep-all">地址:</td>');
+			'<td style="vertical-align:top;line-height:16px;width:38px;white-space:nowrap;word-break:keep-all">地址:</td>'
+			);
 		html.push('<td style="vertical-align:top;line-height:16px">' + poi.address + ' </td>');
 		html.push('</tr>');
 		html.push('</tbody></table>');
