--- a/public/lowCode.html
+++ b/public/lowCode.html
@@ -64,7 +64,7 @@
 
 			<!-- Image Logo -->
 			<a class="navbar-brand logo-image" href="../index.html"><img
-					style="height: 60px;width: 60px;background: #fff;border-radius: 50%;" src="../images/logo.jpg"></a>
+					style="height: 60px;width: 60px;background: #fff;border-radius: 5%;" src="../images/logo.jpg"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -102,7 +102,7 @@
 
 
 		<!-- Header -->
-		<header id="header" class="ex-header aboutInfo">
+		<header id="header" class="ex-header lowInfo">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
@@ -360,12 +360,12 @@
 
 			<div class="officeBoxLog">
 				<div class="officeLeft">
-					 <img src="../images/office9.png" class="imgTrue"> 
+					<img src="../images/office9.png" class="imgTrue">
 					<div class="officeLogLi"></div>
 					<p>可达用户、用户组模式管理,深度权限管理与控制</p>
 				</div>
 				<div class="officeRight">
-					<img src="../images/office8.png"  class="imgTrue">
+					<img src="../images/office8.png" class="imgTrue">
 					<div class="officeLogRi"></div>
 					<P>任意历史版本可以文件方式恢复,
 						管理的颗粒度到模块权限、表、字段的读写
@@ -373,8 +373,8 @@
 				</div>
 			</div>
 		</div>
-		
-		
+
+
 		<div id="business" class="container">
 			<h2>业务及数据库程序自动生成</h2>
 			<div class="officeBox">
@@ -387,86 +387,62 @@
 
 
 		<!-- Footer -->
-		<div class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="text-container about">
-							<h4>Few Words About Aria</h4>
-							<p class="white">We're passionate about creating the best mobile apps for personal develop
-								passionate about
-								creating the best mobile apps for. Personal develop passionate about creating the best
-								mobile apps.</p>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Links</h4>
-							<ul class="list-unstyled li-space-lg white">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li>
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Tools</h4>
-							<ul class="list-unstyled li-space-lg">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li class="media">
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Partners</h4>
-							<ul class="list-unstyled li-space-lg">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li>
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-				</div> <!-- end of row -->
-			</div> <!-- end of container -->
-		</div> <!-- end of footer -->
-		<!-- end of footer -->
+		<div class='footer' style='overflow-x: hidden'>
+			<div class='row' style='display: flex; justify-content: center'>
+				<div class='col-md-3'>
+					<div class='text-container about'>
+						<h4>联系我们</h4>
+						<p class='white'><img src='../images/icon/phone.png'> : 021-58055790</p>
+						<p class='white'><img src='../images/icon/iphone.png' class='small'> : +86-18721633726
+							+86-18017032987</p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> :
+							yanqian_liao@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区新区秀浦路3500号B幢</p>
+					</div>
+
+				</div>
+
+				<div class='col-md-3'>
+					<div class='text-container'>
+						<h4>我们的使命</h4>
+						<p class='white'>持续研发最落地的制造管理信息系统</p>
+						<p class='white'>通过数字化服务提升制造企业效率</p>
+						<p class='white'>提升质量水平，降低浪费和库存</p>
+						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
+						<p class='white'>凝聚我们的力量，收获明日的辉煌</p>
+					</div>
+				</div>
+				<div class='col-md-2'>
+					<div class='text-container' style='text-align: center;margin: 0 auto'>
+						<h6 style='color: #FFFFFF'>社会荣誉</h6>
+						<img src='../images/rongyu1.png' alt='' style='width: 100%'>
+					</div>
+				</div>
+
+				<div class='col-md-2'>
+					<div class='text-container' style='text-align: centermargin: 0 auto'>
+						<h6 style='color: #FFFFFF'>企业证书</h6>
+						<img src='../images/rongyu2.png' alt='' style='width: 100%'>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class='copyright'>
+			<div class='container'>
+				<div class='row'>
+					<div class='col-lg-12'>
+						<p class='p-small'>备案号：沪ICP备16031549号-1　 <a>沪公网安备 31010602003203号</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
-		<!-- Copyright -->
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Template by Inovatik</a></p>
-					</div> <!-- end of col -->
-				</div> <!-- enf of row -->
-			</div> <!-- end of container -->
-		</div> <!-- end of copyright -->
-		<!-- end of copyright -->
 
-
-		<!-- Scripts -->
 		<script src="../js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
 		<script src="../js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
 		<script src="../js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
@@ -479,7 +455,7 @@
 		<script src="../js/scripts.js"></script> <!-- Custom scripts -->
 		<script src="../js/about.js" type="text/javascript" charset="utf-8"></script>
 
-		</script>
+
 		<script src="http://api.map.baidu.com/getscript?v=1.4&ak=&services=&t=20210201021024" type="text/javascript"
 			charset="utf-8"></script>
 	</body>
