--- a/public/mom.html
+++ b/public/mom.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- SEO Meta Tags -->
-		<meta name="description" content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
+		<meta name="description"
+			content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
 		<meta name="author" content="Inovatik">
 
 		<!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
@@ -28,8 +29,10 @@
 		<title>上海灵娃智能科技有限公司</title>
 
 		<!-- Styles -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+			rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
+			rel="stylesheet">
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -58,12 +61,12 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px;background: #fff;border-radius: 50%;"
-				 src="../images/logo.jpg"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img
+					style="height: 60px;width: 60px;background: #fff;border-radius: 5%;" src="../images/logo.jpg"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-			 aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+				aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-awesome fas fa-bars"></span>
 				<span class="navbar-toggler-awesome fas fa-times"></span>
 			</button>
@@ -234,18 +237,46 @@
 					<div class="area-2">
 						<!-- Accordion -->
 						<div class="accordion-container" id="accordionTwo">
-							<h2>TPM设备管理系统</h2>
+							<h2>EAM设备管理系统</h2>
 							<div class="item">
-								<p>TPM是全员生产维护（ Total Productive Maintenance ）的缩写，是自主研发的全员参与的设备维修体系系统模块，
-									涵盖设备采购、登记录入、转移、点检、维修、保养、巡检、盘点、报废，备品备件出入库等管理，覆盖设备全生命周期的管理包括事后维修、
-									定期校验、预防维护、生产维护，利用维护保养计划提醒、派工的电子化操作，提升维护保养的及时性、达成率，降低设备发生故障的机率，提高企业利润、降低成本。</p>
-								<p>实现电脑、平板等多种接入方式，方便用户及时、高效地操作处理。全面实现设备效率、维护保养的电子化、网络化、智能化，更加及时有效地反应设备运行情况。</p>
-								<p>通过与ANDON系统的集成，实现现场生产、设备状态的全可视化，提供实时数据信息，有助于提升现场管理水平。</p>
+								<p>EAM设备维修体系系统模块，覆盖设备、工装、夹具、检具、模具的一体化管理。
+								<p>涵盖固定资产管理、点检、维修、预防性保养、备品备件管理，
+									覆盖设备全生命周期的管理包括事后维修、定期校验、预防维护、
+									生产维护，利用维护保养计划提醒、派工的电子化操作，提升维护保养的及时性、
+									达成率，降低设备发生故障的机率，提高企业利润、降低成本。</p>
+								<p> 实现电脑、平板等多种接入方式，方便用户及时、高效地操作处理。</p>
+								全面实现设备效率、维护保养的电子化、网络化、智能化，更加及时有效地反应设备运行情况。</p>
+								<p>通过与ANDON系统的集成，实现现场生产、设备状态的全可视化，提供实时数据信息，有助于提升现场管理水平。
+									集成震动、电压、 电流传感器实现设备的预期性维修。</p>
+								</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
+
+
+			<!-- 第六个 -->
+			<div class="tabs" style="width: 80%; margin: 0 auto;">
+				<div class="area-1">
+					<div class="tabs-container">
+						<h2 style="margin-bottom: 30px;">灵娃APS系统</h2>
+						<div class="tab-content">
+							<!-- Tab -->
+							<div class="tab-pane fade show active" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
+								<p>订单评审：生产订单、附件订单、预装件订单,
+									资源管理：产能资源、产线资源、机器设备资源、劳动力、标准节拍工时、齐套欠料。</p>
+								<p>多品种多工序的生产计划排程，可采用APS+ERP+MES模式的集中排产或分层排产</p>
+								<p>考虑设备和人员的负荷，精确安排工厂中的每一台设备和每一个人员未来日程作业。</p>
+								<p>订单的滚动预测，生产.采购的可视化排程，缩短制造提前期，消减库存，提高客户交货期的遵守率</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="area-2 apsNew"></div>
+			</div>
+
 		</div>
 
 
@@ -253,81 +284,59 @@
 
 
 		<!-- Footer -->
-		<div class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="text-container about">
-							<h4>Few Words About Aria</h4>
-							<p class="white">We're passionate about creating the best mobile apps for personal develop passionate about
-								creating the best mobile apps for. Personal develop passionate about creating the best mobile apps.</p>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Links</h4>
-							<ul class="list-unstyled li-space-lg white">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li>
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Tools</h4>
-							<ul class="list-unstyled li-space-lg">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li class="media">
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-					<div class="col-md-2">
-						<div class="text-container">
-							<h4>Partners</h4>
-							<ul class="list-unstyled li-space-lg">
-								<li>
-									<a class="white" href="#your-link">startupguide.com</a>
-								</li>
-								<li>
-									<a class="white" href="terms-conditions.html">Terms & Conditions</a>
-								</li>
-								<li>
-									<a class="white" href="privacy-policy.html">Privacy Policy</a>
-								</li>
-							</ul>
-						</div> <!-- end of text-container -->
-					</div> <!-- end of col -->
-				</div> <!-- end of row -->
-			</div> <!-- end of container -->
-		</div> <!-- end of footer -->
-		<!-- end of footer -->
+		<div class='footer' style='overflow-x: hidden'>
+			<div class='row' style='display: flex; justify-content: center'>
+				<div class='col-md-3'>
+					<div class='text-container about'>
+						<h4>联系我们</h4>
+						<p class='white'><img src='../images/icon/phone.png'> : 021-58055790</p>
+						<p class='white'><img src='../images/icon/iphone.png' class='small'> : +86-18721633726
+							+86-18017032987</p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/email.png' class='small'> :
+							yanqian_liao@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区新区秀浦路3500号B幢</p>
+					</div>
 
+				</div>
 
-		<!-- Copyright -->
-		<div class="copyright">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<p class="p-small">Copyright © 2020 <a href="https://inovatik.com">Template by Inovatik</a></p>
-					</div> <!-- end of col -->
-				</div> <!-- enf of row -->
-			</div> <!-- end of container -->
-		</div> <!-- end of copyright -->
-		<!-- end of copyright -->
+				<div class='col-md-3'>
+					<div class='text-container'>
+						<h4>我们的使命</h4>
+						<p class='white'>持续研发最落地的制造管理信息系统</p>
+						<p class='white'>通过数字化服务提升制造企业效率</p>
+						<p class='white'>提升质量水平，降低浪费和库存</p>
+						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
+						<p class='white'>凝聚我们的力量，收获明日的辉煌</p>
+					</div>
+				</div>
+				<div class='col-md-2'>
+					<div class='text-container' style='text-align: center;margin: 0 auto'>
+						<h6 style='color: #FFFFFF'>社会荣誉</h6>
+						<img src='../images/rongyu1.png' alt='' style='width: 100%'>
+					</div>
+				</div>
+
+				<div class='col-md-2'>
+					<div class='text-container' style='text-align: centermargin: 0 auto'>
+						<h6 style='color: #FFFFFF'>企业证书</h6>
+						<img src='../images/rongyu2.png' alt='' style='width: 100%'>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<div class='copyright'>
+			<div class='container'>
+				<div class='row'>
+					<div class='col-lg-12'>
+						<p class='p-small'>备案号：沪ICP备16031549号-1　 <a>沪公网安备 31010602003203号</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 		<!-- Scripts -->
